[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/scenes/message_view/message_view.gd" type="Script" id=1]
[ext_resource path="res://src/ui/icons/File.svg" type="Texture" id=2]
[ext_resource path="res://src/ui/icons/Search.svg" type="Texture" id=3]
[ext_resource path="res://src/ui/icons/Close.svg" type="Texture" id=4]
[ext_resource path="res://src/ui/icons/Sort.svg" type="Texture" id=5]
[ext_resource path="res://src/scenes/message_view/message_view_state.gd" type="Script" id=6]
[ext_resource path="res://src/ui/icons/Reload.svg" type="Texture" id=8]
[ext_resource path="res://src/controls/item_list_navigator.gd" type="Script" id=9]

[node name="MessageView" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="MessageViewState" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource( 6 )

[node name="FileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
margin_left = 5.0
margin_top = 5.0
margin_right = 1115.0
margin_bottom = 795.0
rect_min_size = Vector2( 400, 140 )
popup_exclusive = true
window_title = "Open a File"
mode = 0
filters = PoolStringArray( "*.pot ; Portable Object Template" )

[node name="Layout" type="VBoxContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 1115.0
margin_bottom = 795.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LoadButton" type="Button" parent="Layout"]
unique_name_in_owner = true
margin_right = 1110.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 28 )
text = "Load template"
icon = ExtResource( 2 )
align = 0

[node name="PathRow" type="HBoxContainer" parent="Layout"]
unique_name_in_owner = true
margin_top = 32.0
margin_right = 1110.0
margin_bottom = 61.0
rect_min_size = Vector2( 0, 28 )

[node name="PathInput" type="LineEdit" parent="Layout/PathRow"]
unique_name_in_owner = true
margin_right = 1046.0
margin_bottom = 29.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "res://template.pot"
editable = false
virtual_keyboard_enabled = false
caret_blink = true
caret_blink_speed = 0.5

[node name="ReloadButton" type="ToolButton" parent="Layout/PathRow"]
unique_name_in_owner = true
margin_left = 1050.0
margin_right = 1078.0
margin_bottom = 29.0
hint_tooltip = "Reload template"
size_flags_vertical = 3
icon = ExtResource( 8 )
icon_align = 1

[node name="ClearButton" type="ToolButton" parent="Layout/PathRow"]
unique_name_in_owner = true
margin_left = 1082.0
margin_right = 1110.0
margin_bottom = 29.0
hint_tooltip = "Close template"
size_flags_vertical = 3
icon = ExtResource( 4 )
icon_align = 1

[node name="FilterRow" type="HBoxContainer" parent="Layout"]
margin_top = 65.0
margin_right = 1110.0
margin_bottom = 93.0

[node name="FilterInput" type="LineEdit" parent="Layout/FilterRow"]
unique_name_in_owner = true
margin_right = 1078.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 28 )
size_flags_horizontal = 3
size_flags_vertical = 3
clear_button_enabled = true
right_icon = ExtResource( 3 )
placeholder_text = "Filter messages"
caret_blink = true
caret_blink_speed = 0.5

[node name="SortButton" type="Button" parent="Layout/FilterRow"]
unique_name_in_owner = true
margin_left = 1082.0
margin_right = 1110.0
margin_bottom = 28.0
rect_clip_content = true
hint_tooltip = "Sort messages"
size_flags_vertical = 3
toggle_mode = true
action_mode = 0
icon = ExtResource( 5 )
flat = true
icon_align = 1

[node name="SortMenu" type="PopupMenu" parent="Layout/FilterRow/SortButton"]
unique_name_in_owner = true
margin_right = 144.0
margin_bottom = 74.0
items = [ "Unsorted", null, 2, true, false, 0, 0, null, "", false, "Sort Ascending", null, 2, false, false, 1, 0, null, "", false, "Sort Descending", null, 2, false, false, 2, 0, null, "", false ]

[node name="ItemList" type="ItemList" parent="Layout"]
unique_name_in_owner = true
margin_top = 97.0
margin_right = 1110.0
margin_bottom = 769.0
size_flags_horizontal = 3
size_flags_vertical = 3
allow_reselect = true
allow_rmb_select = true

[node name="ItemListNavigator" type="Node" parent="Layout/ItemList"]
script = ExtResource( 9 )
next_action = "message_next"
prev_action = "message_prev"

[node name="StatusLabel" type="Label" parent="Layout"]
unique_name_in_owner = true
margin_top = 773.0
margin_right = 1110.0
margin_bottom = 790.0
theme_type_variation = "StatusBar"
text = "0 messages"
valign = 1

[connection signal="changed" from="MessageViewState" to="." method="_on_state_changed" flags=3]
[connection signal="file_selected" from="FileDialog" to="." method="_on_dialog_file_selected"]
[connection signal="pressed" from="Layout/LoadButton" to="." method="_on_load_pressed"]
[connection signal="pressed" from="Layout/PathRow/ReloadButton" to="." method="_on_reload_pressed"]
[connection signal="pressed" from="Layout/PathRow/ClearButton" to="." method="_on_clear_pressed"]
[connection signal="text_changed" from="Layout/FilterRow/FilterInput" to="." method="_on_filter_text_changed"]
[connection signal="pressed" from="Layout/FilterRow/SortButton" to="." method="_on_sort_pressed"]
[connection signal="index_pressed" from="Layout/FilterRow/SortButton/SortMenu" to="." method="_on_sort_menu_index_pressed"]
[connection signal="popup_hide" from="Layout/FilterRow/SortButton/SortMenu" to="." method="_on_sort_menu_popup_hide" flags=3]
[connection signal="item_rmb_selected" from="Layout/ItemList" to="." method="_on_list_item_rmb_selected"]
[connection signal="item_selected" from="Layout/ItemList" to="." method="_on_list_item_selected"]
